# goit-pythonweb-hw-06

./: .gitignore  README.md  alembic.ini  connect.py  models.py  my_select.py  pyproject.toml  seed.py  settings.py
migrations/: env.py
migrations/versions/: 2a1a15cee1c7_initial_schema.py
