[project]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "HW6"
authors = [
    {name = "Volodymyr Pohoretskyi",email = "v.pohoretskyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "faker (>=38.2.0,<39.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
